objects/Zone__c.object
<CustomObject>
    <description>TCN Zone (geographical area)</description>
    <fields>
        <fullName>Region__c</fullName>
        <description>Region the zone is part of</description>
        <inlineHelpText>The region this zones is part of</inlineHelpText>
        <label>Region</label>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>Zones</relationshipLabel>
        <relationshipName>Zones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Used_this_year__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows list views for zones that are used for current year. Not referenced in any formulas/workflows/APEX etc.</description>
        <label>Used this year?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zonal_GIS_VIS_lead_email__c</fullName>
        <label>Zonal RAF lead email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Zone_code__c</fullName>
        <description>Zone&apos;s unique code</description>
        <inlineHelpText>Zone&apos;s unique code</inlineHelpText>
        <label>Zone code</label>
        <length>1</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Zone_lead_Programmes__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lead for the zone, within the Programmes dept</description>
        <inlineHelpText>Lead for the zone, within the Programmes dept</inlineHelpText>
        <label>Zone lead Programmes</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <filterItems>
                <field>$Profile.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Zones</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Zone</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Zone_code__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Used_this_year__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Zone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>